--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel-Guide-Website</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/footer.css">
+    
 </head>
 <body>
     <div>
-        <header></header>
+        <header>
+            <div id="navbar"></div>
+        </header>
         <h1>Hello Word</h1>
         <footer></footer>
     </div>
 </body>
+<script>
+    fetch('components/navbar/navbar.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('navbar').innerHTML = data;
+        })
+        .catch(error => console.error('Có lỗi xảy ra:', error));
+</script>
 </html>
