--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel-Guide-Website</title>
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/navbar.css">
-    <link rel="stylesheet" href="css/footer.css">
-    
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/css/index.css">
 </head>
-<body>
+<body id="body">
     <div>
         <header>
             <div id="navbar"></div>
         </header>
-        <h1>Hello Word</h1>
+        <main>
+
+
+        </main>
+        <!-- <h1>Hello Word</h1> -->
         <footer></footer>
     </div>
 </body>
