--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Travel-Guide-Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/index.css">
+    <link rel="stylesheet" href="/assets/css/navbar.css">
 </head>
 <body id="body">
     <div>
