--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travel-Guide-Website</title>
     <link href="https://fonts.googleapis.com/css2?family=Syne:wght@400;700&display=swap" rel="stylesheet">
+    <!-- deploy -->
     <link rel="stylesheet" href="/Travel-Guide-Website/assets/css/index.css">
     <link rel="stylesheet" href="/Travel-Guide-Website/assets/css/navbar.css">
+    <!-- live sever -->
+    <link rel="stylesheet" href="/assets/css/navbar.css">
+    <link rel="stylesheet" href="/assets/css/home1.css">
+    <link rel="stylesheet" href="/assets/css/index.css">
 </head>
 <body id="body">
     <div>
         <header>
             <div id="navbar"></div>
         </header>
-        <main>
-
+        <main class="">
+            <section id="home1">
+                <div class="content-home1">
+                    <h1>New way to plan your next dream trip</h1>
+                </div>
+                <!-- <p>Lorem, ipsum.</p> -->
+            </section>
 
         </main>
         <!-- <h1>Hello Word</h1> -->
