--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- deploy -->
     <link rel="stylesheet" href="/Travel-Guide-Website/assets/css/index.css">
     <link rel="stylesheet" href="/Travel-Guide-Website/assets/css/navbar.css">
+    <link rel="stylesheet" href="/Travel-Guide-Website/assets/css/home1.css">
     <!-- live sever -->
     <link rel="stylesheet" href="/assets/css/navbar.css">
     <link rel="stylesheet" href="/assets/css/home1.css">
